<resources>
    <string name="app_name">SmartAssistant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_1">小优</string>
    <string name="title_2">微信精选</string>
    <string name="title_3">表情包</string>
    <string name="title_4">个人中心</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_setting">设置</string>
    <string name="btn_in">进入主页</string>
    <string name="title_activity_login">Sign in</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_pd">记住密码</string>
    <string name="forgetpd">忘记密码</string>
    <string name="text_now_password">请输入现在的密码</string>
    <string name="text_new_password">请输入新密码</string>
    <string name="text_password_again">请再次输入新密码</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_email">请输入邮箱</string>
    <string name="text_now_login">正在登录</string>
    <string name="user_eidt">编辑资料</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_age">年龄</string>
    <string name="user_desc">简介</string>
    <string name="confirm_change">确定修改</string>
    <string name="courier">物流查询</string>
    <string name="phone_loacl">手机号归属地查询</string>
    <string name="exit">退出登录</string>
    <string name="should_not_null">输入框不能为空</string>
    <string name="text_courier_company">快递公司编号</string>
    <string name="text_courier_number">快递单号</string>
    <string name="text_input_phone">请输入号码</string>
    <string name="text_query">查询</string>
    <string name="send">发送</string>
    <string name="change_pwd">修改密码</string>
    <string name="save_picture">保存图片</string>
    <string name="save_picture_failed">保存失败</string>
    <string name="save_picture_success">图片成功保存至%s目录</string>
    <string name="text_courier_table">快递公司编号对照表</string>


</resources>
