<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    >


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/login_img2"
        />

    <EditText
        android:id="@+id/et_name_lg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHighlight="@color/colorAccent"
        />

    <EditText
        android:id="@+id/et_pwd_lg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        >

        <CheckBox
            android:id="@+id/keep_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/remember_pd"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_bg"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btn_register_lg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/button_bg"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"

        />
</LinearLayout>